# cpp-rank-match-service

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md  interview-notes.md  verification.md
include/cache/: ranking_cache.h  redis_ranking_cache.h
include/common/: time_utils.h
include/match/: match_manager.h
include/model/: types.h
include/protocol/: command_dispatcher.h
include/ranking/: ranking_board.h
include/reward/: reward_manager.h
include/storage/: storage_repository.h
scripts/: demo_flow.py
src/: main.cpp
src/cache/: redis_ranking_cache.cpp
src/match/: match_manager.cpp
src/protocol/: command_dispatcher.cpp
src/ranking/: ranking_board.cpp
src/reward/: reward_manager.cpp
src/storage/: storage_repository.cpp
